src/index.css
@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --color-background: oklch(1 0 0);
  --color-foreground: oklch(0.145 0 0);
  --color-card: oklch(1 0 0);
  --color-card-foreground: oklch(0.145 0 0);
  --color-popover: oklch(1 0 0);
  --color-popover-foreground: oklch(0.145 0 0);
  --color-primary: oklch(0.405 0.154 263.83);
  --color-primary-foreground: oklch(0.985 0.002 247.86);
  --color-secondary: oklch(0.965 0.001 286.38);
  --color-secondary-foreground: oklch(0.21 0.006 285.88);
  --color-muted: oklch(0.965 0.001 286.38);
  --color-muted-foreground: oklch(0.552 0.016 285.94);
  --color-accent: oklch(0.965 0.001 286.38);
  --color-accent-foreground: oklch(0.21 0.006 285.88);
  --color-destructive: oklch(0.577 0.245 27.33);
  --color-destructive-foreground: oklch(0.577 0.245 27.33);
  --color-border: oklch(0.922 0.004 286.32);
  --color-input: oklch(0.922 0.004 286.32);
  --color-ring: oklch(0.405 0.154 263.83);
  --color-chart-1: oklch(0.646 0.222 41.12);
  --color-chart-2: oklch(0.6 0.118 184.7);
  --color-chart-3: oklch(0.398 0.07 227.39);
  --color-chart-4: oklch(0.828 0.189 84.43);
  --color-chart-5: oklch(0.769 0.188 70.08);
  --color-sidebar: oklch(0.985 0.002 247.86);
  --color-sidebar-foreground: oklch(0.145 0 0);
  --color-sidebar-primary: oklch(0.405 0.154 263.83);
  --color-sidebar-primary-foreground: oklch(0.985 0.002 247.86);
  --color-sidebar-accent: oklch(0.965 0.001 286.38);
  --color-sidebar-accent-foreground: oklch(0.21 0.006 285.88);
  --color-sidebar-border: oklch(0.922 0.004 286.32);
  --color-sidebar-ring: oklch(0.405 0.154 263.83);
  --radius-sm: 0.25rem;
  --radius-md: 0.375rem;
  --radius-lg: 0.5rem;
  --radius-xl: 0.75rem;
}

@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-border);
  }
  body {
    background-color: var(--color-background);
    color: var(--color-foreground);
    font-feature-settings: "rlig" 1, "calt" 1;
  }
}

